Removed tab character from source files